# INIT_PYTHON_TEMPLATE_PROJECT

./: .bandit.yml  README.rst  pyproject.toml  setup.cfg
srv/base_commands/: base_commands.py
srv/checkers/: constants.py  pre_commit.sh  pre_push.sh  run_hooks.py
srv/git_hooks/: git_hooks_installer.py
srv/git_hooks/hooks/: pre-commit  pre-push
