[tool.poetry]
name = "PROJECT_NAME_TEMPLATE"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "srv/checkers/run_hooks.py" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pycodestyle = "^2.7.0"
flake8 = "^3.9.2"
pylint = "^2.11.1"
safety = "^1.10.3"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
init = "srv.checkers.run_hooks:init"
lint = "srv.checkers.run_hooks:lint"
pre_push = "srv.checkers.run_hooks:pre_push"
